--- a/pom.xml
+++ b/pom.xml
@@ -5,6 +5,21 @@
     <artifactId>mind</artifactId>
     <version>0.0.1</version>
     
+    <!--
+    <repositories>
+        <repository>
+            <id>lib</id>
+            <releases>
+                <enabled>true</enabled>
+                <checksumPolicy>ignore</checksumPolicy>
+            </releases>
+            <snapshots>
+                <enabled>false</enabled>
+            </snapshots>
+            <url>file://${project.basedir}/lib</url>
+        </repository>
+    </repositories>-->
+    
     <dependencies>
         
         <dependency>
